<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jd.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_backlog"
            app:destination="@id/navigation_backlog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_backlog"
        android:name="com.jd.myapplication.ui.backlog.BacklogFragment"
        android:label="@string/title_backlog"
        tools:layout="@layout/fragment_backlog" >
        <action
            android:id="@+id/action_navigation_backlog_to_navigation_mine"
            app:destination="@id/navigation_mine" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.jd.myapplication.ui.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>