<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/text_backlog"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/title_background"
            android:gravity="center"
            android:text="@string/title_backlog"
            android:textColor="@color/color_light_background">

        </TextView>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_light_background"
            android:gravity="center|start"
            android:text="@string/purchase" />

        <LinearLayout
            android:id="@+id/baclog"
            android:layout_width="match_parent"
            android:layout_height="261dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_light_background"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_light_background"
            android:gravity="center|start"
            android:text="@string/change" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_light_background"
            android:gravity="center|start"
            android:text="@string/leave" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_light_background"
            android:gravity="center|start"
            android:text="@string/overtime" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_light_background"
            android:gravity="center|start"
            android:text="@string/business" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>