<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorbackground"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="409dp"
            android:layout_height="198dp"
            android:background="@drawable/title"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/color_light_background"
            android:orientation="horizontal"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:gravity="center|start"
                    android:text="@string/name" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:gravity="center|start"
                    android:text="@string/gender" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:gravity="center|start"
                    android:text="@string/email" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:gravity="center|start"
                    android:text="@string/phone" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"

                    android:gravity="center|start"
                    android:text="@string/company" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:gravity="center|start"
                    android:text="@string/address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|start" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|start" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|start" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|start" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|start" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|start" />

                <TextView
                    android:id="@+id/text_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>




</ScrollView>